--- a/CarpoolingApp/Ressourcen/Stylesheet.css
+++ b/CarpoolingApp/Ressourcen/Stylesheet.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: url('C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Background2.jpg') no-repeat center center fixed;
+    background: url('../Ressourcen/Images/Background2.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     flex-direction: column;
