--- a/Carpooling_Students/Pages/MyRides.cshtml
+++ b/Carpooling_Students/Pages/MyRides.cshtml
@@ -113,57 +113,46 @@
         <h1>Meine Fahrten</h1>
         <div id="open-rides-section">
             <h2>🚗 Offene Fahrten</h2>
-            <div id="open-rides"></div>
+            @foreach (var ride in Model.Rides)
+            {
+                if (!ride.Abgeschlossen)
+                {
+                    <div class="ride-box">
+                        <div class="ride-info">
+                            <strong>@ride.Route.StartOrt → @ride.Route.ZielOrt</strong>
+                            <span>Startdatum: @ride.StartDatum.ToShortDateString()</span>
+                            <span>Uhrzeit: @ride.StartDatum.ToString("HH\\:mm")</span>
+                            @if (ride is Autofahrt fahrt)
+                            {
+                                <span>@fahrt.Sitze Plätze belegt</span>
+                            }
+                        </div>
+                    </div>
+                }
+            }
         </div>
 
         <div id="closed-rides-section">
             <h2>✅ Abgeschlossene Fahrten</h2>
-            <div id="closed-rides"></div>
+            @foreach (var ride in Model.Rides)
+            {
+                if (ride.Abgeschlossen)
+                {
+                    <div class="ride-box disabled">
+                        <div class="ride-info">
+                            <strong>@ride.Route.StartOrt → @ride.Route.ZielOrt</strong>
+                            <span>Enddatum: @ride.EndDatum.ToShortDateString()</span>
+                            @if (ride is Autofahrt fahrt)
+                            {
+                                <span>@fahrt.Sitze Plätze belegt</span>
+                            }
+                        </div>
+                    </div>
+                }
+            }
         </div>
 
         <button class="back-button" onclick="location.href='@Url.Page("/Profil")'">Zurück</button>
     </div>
-
-    <script>
-        const rides = [
-            { from: "Waidhofen", to: "Amstetten", date: "2025-04-12", time: "07:30", seats: "2 / 4", link: "@Url.Page("/EditPage1")" },
-            { from: "Linz", to: "St. Pölten", date: "2025-02-15", time: "08:00", seats: "1 / 3", link: "@Url.Page("/EditPage1")" },
-            { from: "Amstetten", to: "Wien", date: "2025-04-01", time: "06:45", seats: "3 / 3", link: null },
-            { from: "Krems", to: "Tulln", date: "2025-04-05", time: "09:15", seats: "2 / 4", link: null }
-        ];
-
-        const openContainer = document.getElementById("open-rides");
-        const closedContainer = document.getElementById("closed-rides");
-        const today = new Date();
-
-        rides.forEach(ride => {
-            const rideDate = new Date(ride.date + "T" + ride.time);
-            const isPast = rideDate < today;
-
-            const div = document.createElement("div");
-            div.className = "ride-box" + (isPast ? " disabled" : "");
-
-            if (!isPast && ride.link) {
-                div.onclick = () => location.href = ride.link;
-            }
-
-            div.innerHTML = `
-                <div class="ride-info">
-                    <strong>${ride.from} → ${ride.to}</strong>
-                </div>
-                <div class="ride-meta">
-                    <span>Datum: ${ride.date.split("-").reverse().join(".")}</span>
-                    <span>Uhrzeit: ${ride.time}</span>
-                    <span>${ride.seats} Plätze belegt</span>
-                </div>
-            `;
-
-            if (isPast) {
-                closedContainer.appendChild(div);
-            } else {
-                openContainer.appendChild(div);
-            }
-        });
-    </script>
 </body>
 </html>
