Megre Konflikt fix mit den KLassen

--- a/Carpooling_Students/Pages/CreateDrive.cshtml
+++ b/Carpooling_Students/Pages/CreateDrive.cshtml
@@ -100,7 +100,7 @@
         <form method="post">
             <div class="form-group">
                 <label for="fahrttyp">Fahrttyp</label>
-                <select id="fahrttyp" name="Fahrttyp" required>
+                <select id="fahrttyp" name="Typ" required>
                     
                     <option value="Auto">🚗 Auto</option>
                     <option value="Rad">🚴 Radfahrt</option>
