Neue Models hinzugefügt damit man die Verbindung zwischen Fahrt und Person in EF benutzen kann

--- a/Carpooling_Students/Pages/JoinDrive.cshtml
+++ b/Carpooling_Students/Pages/JoinDrive.cshtml
@@ -132,7 +132,7 @@
         {
             foreach (var fahrt in Model.Fahrten)
             {
-                var freiePlaetze = fahrt.Sitze - fahrt.Passagiere.Count;
+                var freiePlaetze = fahrt.Sitze - fahrt.FahrtPassagiere.Count;
                 <div class="ride-entry" onclick="selectRide(this, @fahrt.FahrtId)">
                     <img src="~/Images/Profile.png" alt="Profilbild">
                     <div class="ride-info">
