MItfahrgelegenheiten und JoinDirve mit der neuen Modelklasse gemacht

--- a/Carpooling_Students/Pages/Mitfahrgelegenheiten.cshtml
+++ b/Carpooling_Students/Pages/Mitfahrgelegenheiten.cshtml
@@ -121,7 +121,7 @@
                     <div class="ride-meta">
                         <span>Datum: @ride.StartDatum.ToString("dd.MM.yyyy")</span>
                         <span>Uhrzeit: @ride.StartDatum.ToString("HH:mm")</span>
-                        <span>@ride.Passagiere.Count / @ride.Sitze Plätze belegt</span>
+                        <span>@ride.FahrtPassagiere.Count / @ride.Sitze Plätze belegt</span>
                     </div>
                 </div>
             }
